# weld

docker/: Dockerfile  README.md  build-weld.sh
examples/cpp/tpch/q6/: CMakeLists.txt  README.md  csvmonkey.h  main.cc
examples/cpp/tpch/q6/cmake/: FindWeld.cmake
weld-python/: Cargo.toml
weld-python/src/: lib.rs
